# Rhythm-Visualization

./: .gitignore  CMakeLists.txt  README.md
data/: Denis-x-Coldplay  denis  test
src/: main.cpp
src/model/: Rhythm.cpp  Rhythm.h  Rythme.cpp  Rythme.h
src/utils/: Timer.cpp  Timer.h
src/view/: Canvas.cpp  Canvas.h
